<resources>
    <!-- App Essentials -->
    <string name="app_name">Lite-Music</string>
    <string name="store_name">Unknown</string>
    <string name="developer_email">developer@email.com</string>
    <string name="Admob_App_ID">ca-app-pub-3940256099942544~3347511713</string>
    <string name="Admob_Interstitial_Ad_Unit">ca-app-pub-3940256099942544/1033173712</string>
    <string name="Admob_Banner_Ad_Unit">ca-app-pub-3940256099942544/6300978111</string>
    <string name="Admob_Reward_Ad_Unit">ca-app-pub-3940256099942544/5224354917</string>
    <string name="unknown">Unknown</string>
    <string name="IronSource_app_key">1bc15cb95</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="intro">This app uses a new feature of Android Oreo called push-notifications. As a result of which the song control panel of the notification bar pops up when any changes are made to the song
playback. For eg. next song is played or the song is paused so that you can change
the song, play/pause while working on other apps without the hassle of opening the Echo app again
or pulling down the notification panel to do the same.</string>

    <string name="solutions">However some users might find it a bit irritating or a distraction. Hence they can always change that behavior by modifying the notification setting of the app by following the given steps :</string>

    <string name="inst1">Open the Settings app and go to Apps &amp; Notifications (or equivalent settings if you are running a custom UI) and open Notifications.
    Click on Echo in the list</string>
    <string name="inst2"> Tap on notify under Categories </string>
    <string name="inst3"> Tap on Importance (which would be set to urgent by default) </string>
    <string name="inst4"> Select High from the list
                          Now Restart the app for the changes to take place</string>
    <string name="nxt">&gt;</string>
    <string name="title_activity_online">OnlineActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>

    <string name="help">Help</string>
    <string name="help_text1">Music Downloader &amp; Mp3 Music Download is an application that allows you to listen to music online, offline and download music online for free.</string>
    <string name="help_text2">Music Downloader Download Mp3 also built-in with music player. You can search easily, download fast, free, and no registration. You will find what music you want to search on our music downloader app.</string>
    <string name="help_text3">• Here we can\'t provide all kind of songs because of Copyright©©©.</string>
    <string name="help_text4">• Try our suggestions to discover interesting tracks you may love!</string>
    <string name="help_text5">• This app allows FOR NONE COMMERCIAL USAGE! All tracks are available for only personal usage.</string>

    <string name="album">album</string>
    <string name="all_songs">All Songs</string>
    <string name="albums">Albums</string>
    <string name="favorites">Favorites</string>
    <string name="by_recently_added">By Recently Added</string>
    <string name="by_name">By Name</string>
    <string name="search">Search</string>
    <string name="need_help">Need Help?</string>
    <string name="you_don_t_have_any_songs_in_the_music_folder_at_the_moment_nadd_songs_to_continue_enjoying_the_music">You don\'t have any Songs in the Music Folder at the moment.\nAdd songs to continue enjoying the music.</string>
    <string name="you_don_t_have_any_albums_in_the_music_folder_at_the_moment_nadd_songs_to_continue_enjoying_the_music">You don\'t have any Albums in the Music Folder at the moment.\nAdd songs or albums to continue enjoying the music.</string>
    <string name="sort_by_name">action_sort_ascending</string>
    <string name="sort_by_recent">action_sort_recent</string>
    <string name="sorting">action_sort</string>
    <string name="media_playback_failure">Playback failed. Please try another song or restart the app.</string>
    <string name="no_app_share">No App found to share with</string>
    <string name="no_email_app">No email app installed</string>
    <string name="no_browser_app">No browser app installed</string>
    <string name="library">Library</string>
    <string name="Fan_Banner_Ad_Unit" />
    <string name="Fan_Interstitial_Ad_Unit" />


</resources>
